feat: add websocket combat system

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -407,6 +407,8 @@
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Those numbers that are not multiples of 5 will be rounded to near 5 multiple. For example: 22 will be rounded to 20 adn 13 to 15",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside automanage combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Show GM rolls automatically in combat",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Main",
@@ -420,9 +422,14 @@
   "anima.ui.weapons.one-handed.title": "one handed",
   "anima.ui.weapons.similar.title": "Similar",
   "anima.ui.weapons.two-handed.title": "two handed",
+  "chat.combatResult.counter.title": "{defender} can counterattack with <b>{bonus}</b> of bonus",
+  "chat.combatResult.damage.title": "{defender} takes <b>{damage}</b> damage points",
+  "chat.combatResult.title": "Combat result",
   "contextualMenu.common.options.delete": "Delete",
   "contextualMenu.elan.options.addPower": "Add power",
   "contextualMenu.elan.options.deletePower": "Delete power",
+  "dialogs.accept": "Accept",
+  "dialogs.cancel": "Cancel",
   "dialogs.continue": "Continue",
   "dialogs.items.advantage.content": "Advantage name",
   "dialogs.items.ammo.content": "Ammo name",
@@ -462,6 +469,8 @@
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
   "macros.combat.dialog.attackButton.title": "Send attack",
+  "macros.combat.dialog.attackConfirm.body.title": "Do you want to attack {target}?",
+  "macros.combat.dialog.attackConfirm.title": "Confirm attack",
   "macros.combat.dialog.attackSent.title": "Attack sent. Waiting for combat results...",
   "macros.combat.dialog.attackType.combat.title": "Physic",
   "macros.combat.dialog.attackType.mystic.title": "Magic",
@@ -472,6 +481,7 @@
   "macros.combat.dialog.blockButton.title": "Try to block",
   "macros.combat.dialog.blockValue.title": "Block value",
   "macros.combat.dialog.cancelButton.title": "Cancel",
+  "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
   "macros.combat.dialog.critic.title": "Crític",
@@ -492,18 +502,35 @@
   "macros.combat.dialog.difference.title": "Difference",
   "macros.combat.dialog.dodgeButton.title": "Try to dodge",
   "macros.combat.dialog.dodgeValue.title": "Dodge value",
+  "macros.combat.dialog.error.alreadyInCombat.title": "Your attack request have being rejected because GM is already involved in a combat. Wait your turn and try again.",
+  "macros.combat.dialog.error.multipleTargets.title": "Only can select one target",
+  "macros.combat.dialog.error.noSelectedActor.title": "You don't have selected a character",
+  "macros.combat.dialog.error.oneTarget.title": "Need to select one target",
+  "macros.combat.dialog.error.requestRejected.title": "Your attack request have being rejected",
+  "macros.combat.dialog.error.withoutActor.title": "The target do not have associated actor",
+  "macros.combat.dialog.error.yourSelf.title": "Can't attack yourself!",
   "macros.combat.dialog.fatigue.title": "Fatigue points",
   "macros.combat.dialog.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.magicAttack.title": "Throw the spell {spell} to {target}",
+  "macros.combat.dialog.magicDefense.title": "Throw the spell {spell} to defend from {target}",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
   "macros.combat.dialog.modifier.title": "Modifier",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
+  "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
+  "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
+  "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
+  "macros.combat.dialog.psychicAttack.title": "Focus sending a load of {power} to {target}",
+  "macros.combat.dialog.psychicDefense.title": "Focus to defend with {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
   "macros.combat.dialog.psychicPower.title": "Psychic power",
   "macros.combat.dialog.psychicProjection.title": "Psychic projection",
   "macros.combat.dialog.requestPermission.title": " requests permission to attack ",
   "macros.combat.dialog.rolled.title": "Dice rolled",
+  "macros.combat.dialog.showResultsButton.title": "Send to chat the results",
+  "macros.combat.dialog.showRoll.title": "Show roll",
   "macros.combat.dialog.spell.title": "Spell",
   "macros.combat.dialog.spellGrade.advanced.title": "Advanced",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
