--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -406,6 +406,8 @@
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Aquellos números que no sean múltiplos de 5 se redondearán al múltiplo más cercano de 5. P.E: 22 se redondeará a 20 y 13 a 15",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear el daño resultante de la calculadora de daño en múltiplos de 5?",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Cuando se use el combate autogestionado por el sistema, posibilidad de mostrar las tiradas que realice el GM vendrán marcadas por defecto según este valor",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Principal",
@@ -419,9 +421,14 @@
   "anima.ui.weapons.one-handed.title": "A una mano",
   "anima.ui.weapons.similar.title": "Similar",
   "anima.ui.weapons.two-handed.title": "A dos manos",
+  "chat.combatResult.counter.title": "{defender} puede contrarrestar con un bono de <b>{bonus}</b> puntos",
+  "chat.combatResult.damage.title": "{defender} recibe <b>{damage}</b> puntos de daño",
+  "chat.combatResult.title": "Resultado del combate",
   "contextualMenu.common.options.delete": "Eliminar",
   "contextualMenu.elan.options.addPower": "Añadir poder",
   "contextualMenu.elan.options.deletePower": "Eliminar poder",
+  "dialogs.accept": "Aceptar",
+  "dialogs.cancel": "Cancelar",
   "dialogs.continue": "Continuar",
   "dialogs.items.advantage.content": "Nombre de la ventaja",
   "dialogs.items.ammo.content": "Nombre de la munición",
@@ -460,6 +467,8 @@
   "macros.combat.dialog.at.title": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
   "macros.combat.dialog.attackButton.title": "Enviar ataque",
+  "macros.combat.dialog.attackConfirm.body.title": "¿Quieres atacar a {target}?",
+  "macros.combat.dialog.attackConfirm.title": "Confirmar ataque",
   "macros.combat.dialog.attackSent.title": "Ataque enviado. Esperando a los resultados del combate...",
   "macros.combat.dialog.attackType.combat.title": "Físico",
   "macros.combat.dialog.attackType.mystic.title": "Mágico",
@@ -470,6 +479,7 @@
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
+  "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
   "macros.combat.dialog.critic.title": "Crítico",
@@ -490,18 +500,35 @@
   "macros.combat.dialog.difference.title": "Diferencia de totales",
   "macros.combat.dialog.dodgeButton.title": "Intentar esquivar",
   "macros.combat.dialog.dodgeValue.title": "Valor de esquiva",
+  "macros.combat.dialog.error.alreadyInCombat.title": "Tu petición de ataque ha sido rechazada debido a que el GM ya se encuentra en un combate. Espera a tu turno e intentalo de nuevo.",
+  "macros.combat.dialog.error.multipleTargets.title": "Sólo puedes seleccionar un objetivo",
+  "macros.combat.dialog.error.noSelectedActor.title": "No tienes seleccionado a ningún personaje",
+  "macros.combat.dialog.error.oneTarget.title": "Necesitas seleccionar un objetivo",
+  "macros.combat.dialog.error.requestRejected.title": "Tu petición de ataque ha sido rechazada.",
+  "macros.combat.dialog.error.withoutActor.title": "El objetivo al que intentas atacar no tiene actor asociado",
+  "macros.combat.dialog.error.yourSelf.title": "¡No puedes atacarte a ti mismo!",
   "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio {spell} a {target}",
+  "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio {spell} para defenderse del ataque de {target}",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
   "macros.combat.dialog.modifier.title": "Modificador",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
+  "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
+  "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
+  "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
+  "macros.combat.dialog.psychicAttack.title": "Se concentra enviando una descarga de {power} a {target}",
+  "macros.combat.dialog.psychicDefense.title": "Se concentra para defenderse con {power} del ataque de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
   "macros.combat.dialog.psychicPower.title": "Poder psíquico",
   "macros.combat.dialog.psychicProjection.title": "Proyección psíquica",
-  "macros.combat.dialog.requestPermission.title": " ha enviado una petición de ataque a ",
+  "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
+  "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
+  "macros.combat.dialog.showRoll.title": "Mostrar tirada",
   "macros.combat.dialog.spell.title": "Hechizo",
   "macros.combat.dialog.spellGrade.advanced.title": "Avanzado",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcano",
