changes: ws combat now use tokens as source of truth

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -505,6 +505,13 @@
   "macros.combat.dialog.error.alreadyInCombat.title": "Your attack request have being rejected because GM is already involved in a combat. Wait your turn and try again.",
   "macros.combat.dialog.error.multipleTargets.title": "Only can select one target",
   "macros.combat.dialog.error.noSelectedActor.title": "You don't have selected a character",
+  "macros.combat.dialog.error.noSelectedToken.title": "You don't have selected a attacker",
+  "macros.combat.dialog.error.cannotAttackYourself.title": "Cannot attack yourself",
+  "macros.combat.dialog.error.noTokenInCurrentScene.title": "You don't have ownership of any token in current scene",
+  "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Your token do not have any actor associated",
+  "macros.combat.dialog.error.noExistTokenAnymore.title": "Token {token} do not exist anymore",
+  "macros.combat.dialog.error.noGMActive.title": "Right now DM is not connected. Cant attack.",
+  "macros.combat.dialog.error.notInActiveScene.title": "Can't attack while you are not in active scene",
   "macros.combat.dialog.error.oneTarget.title": "Need to select one target",
   "macros.combat.dialog.error.requestRejected.title": "Your attack request have being rejected",
   "macros.combat.dialog.error.withoutActor.title": "The target do not have associated actor",
