--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -502,7 +502,16 @@
   "macros.combat.dialog.dodgeValue.title": "Valor de esquiva",
   "macros.combat.dialog.error.alreadyInCombat.title": "Tu petición de ataque ha sido rechazada debido a que el GM ya se encuentra en un combate. Espera a tu turno e intentalo de nuevo.",
   "macros.combat.dialog.error.multipleTargets.title": "Sólo puedes seleccionar un objetivo",
-  "macros.combat.dialog.error.noSelectedActor.title": "No tienes seleccionado a ningún personaje",
+  "macros.combat.dialog.error.noSelectedActor.title": "No tienes seleccionado a ningún personaje. Asegurate de seleccionarlo cuando entres al mundo por primera vez.",
+  "macros.combat.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún atacante",
+  "macros.combat.dialog.error.cannotAttackYourself.title": "No puedes atacarte a ti mismo",
+  "macros.combat.dialog.error.noTokenInCurrentScene.title": "No eres owner de ningún token en la escena actual",
+  "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Tu token no tiene asociado un actor",
+  "macros.combat.dialog.error.noActorAssociatedToToken.title": "El token {token} no tiene un actor asociado",
+  "macros.combat.dialog.error.noGMActive.title": "No se encuentra ningún GM activo ahora mismo, por lo que no puedes realizar un ataque",
+  "macros.combat.dialog.error.noActorOnCurrentScene.title": "No se ha encontrado al actor {actor} en la escena actual",
+  "macros.combat.dialog.error.notInActiveScene.title": "No puedes atacar si no estás en la escena activa",
+  "macros.combat.dialog.error.noExistTokenAnymore.title": "El token {token} no existe",
   "macros.combat.dialog.error.oneTarget.title": "Necesitas seleccionar un objetivo",
   "macros.combat.dialog.error.requestRejected.title": "Tu petición de ataque ha sido rechazada.",
   "macros.combat.dialog.error.withoutActor.title": "El objetivo al que intentas atacar no tiene actor asociado",
