fix: minor combat system fix and i18n

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -491,6 +491,7 @@
   "macros.combat.dialog.defender.title": "Defender",
   "macros.combat.dialog.defenderCustomModifier.title": "Defender custom modifier",
   "macros.combat.dialog.defending.defend.title": "Defense",
+  "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.defending.title": "Defending from ",
   "macros.combat.dialog.defense.title": "Defense",
   "macros.combat.dialog.defenseButton.title": "Send defense",
@@ -511,6 +512,7 @@
   "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Your token do not have any actor associated",
   "macros.combat.dialog.error.noExistTokenAnymore.title": "Token {token} do not exist anymore",
   "macros.combat.dialog.error.noGMActive.title": "Right now DM is not connected. Cant attack.",
+  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
   "macros.combat.dialog.error.notInActiveScene.title": "Can't attack while you are not in active scene",
   "macros.combat.dialog.error.oneTarget.title": "Need to select one target",
   "macros.combat.dialog.error.requestRejected.title": "Your attack request have being rejected",
