--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -475,6 +475,7 @@
   "macros.combat.dialog.attackType.psychic.title": "Psíquico",
   "macros.combat.dialog.attacker.title": "Atacante",
   "macros.combat.dialog.attackerCustomModifier.title": "Modificador personalizado del ataque",
+  "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.attacking.title": "Atacando a ",
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
@@ -509,6 +510,7 @@
   "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Tu token no tiene asociado un actor",
   "macros.combat.dialog.error.noActorAssociatedToToken.title": "El token {token} no tiene un actor asociado",
   "macros.combat.dialog.error.noGMActive.title": "No se encuentra ningún GM activo ahora mismo, por lo que no puedes realizar un ataque",
+  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
   "macros.combat.dialog.error.noActorOnCurrentScene.title": "No se ha encontrado al actor {actor} en la escena actual",
   "macros.combat.dialog.error.notInActiveScene.title": "No puedes atacar si no estás en la escena activa",
   "macros.combat.dialog.error.noExistTokenAnymore.title": "El token {token} no existe",
