changes: add running meters calculation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -188,8 +188,9 @@
   "anima.ui.general.modifiers.allActions.title": "Actions",
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
-  "anima.ui.general.movement.quarter.title": "1/4 (m)",
-  "anima.ui.general.movement.title": "Movement (m)",
+  "anima.ui.general.movement.quarter.title": "1/4",
+  "anima.ui.general.movement.normal.title": "Normal (m)",
+  "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
   "anima.ui.general.tabs.first": "Character",
