--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -188,8 +188,9 @@
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
-  "anima.ui.general.movement.quarter.title": "1/4 (m)",
-  "anima.ui.general.movement.title": "Movimiento (m)",
+  "anima.ui.general.movement.quarter.title": "1/4",
+  "anima.ui.general.movement.normal.title": "Normal (m)",
+  "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
   "anima.ui.general.tabs.first": "Personaje",
