feat: add presence and destiny points

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -64,7 +64,7 @@
   "anima.ui.combat.armors.presence.base.title": "Base presence",
   "anima.ui.combat.armors.presence.title": "Presence",
   "anima.ui.combat.armors.quality.title": "Quality",
-  "anima.ui.combat.armors.title": "Armaduras",
+  "anima.ui.combat.armors.title": "Armors",
   "anima.ui.combat.armors.type.hard.title": "Hard",
   "anima.ui.combat.armors.type.natural.title": "Natural",
   "anima.ui.combat.armors.type.soft.title": "Soft",
@@ -181,6 +181,7 @@
   "anima.ui.elanSection.elanRow.name": "Power",
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experience",
+  "anima.ui.general.destinyPoints.title": "Destiny points",
   "anima.ui.general.fatigue.title": "Fatigue",
   "anima.ui.general.initiative.base.title": "Turn",
   "anima.ui.general.life.current.title": "Life points",
@@ -188,11 +189,12 @@
   "anima.ui.general.modifiers.allActions.title": "Actions",
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
-  "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.normal.title": "Normal (m)",
-  "anima.ui.general.movement.running.title": "Corriendo",
+  "anima.ui.general.movement.quarter.title": "1/4",
+  "anima.ui.general.movement.running.title": "Running",
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
+  "anima.ui.general.presence.title": "Presence",
   "anima.ui.general.tabs.first": "Character",
   "anima.ui.general.tabs.second": "Details",
   "anima.ui.general.tabs.third": "Inventory",
@@ -408,7 +410,7 @@
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Those numbers that are not multiples of 5 will be rounded to near 5 multiple. For example: 22 will be rounded to 20 adn 13 to 15",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
-  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside automanage combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside managed combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Show GM rolls automatically in combat",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.domine": "Domine",
@@ -450,7 +452,7 @@
   "dialogs.items.martialArt.content": "Martial art name",
   "dialogs.items.mentalPattern.content": "Mental pattern name",
   "dialogs.items.metamagic.content": "Metamagic name",
-  "dialogs.items.nemesisSkill.content": "Némesis skill name",
+  "dialogs.items.nemesisSkill.content": "Nemesis skill name",
   "dialogs.items.note.content": "Note content",
   "dialogs.items.psychicDiscipline.content": "Discipline name",
   "dialogs.items.psychicPower.content": "Psychic power name",
@@ -476,7 +478,7 @@
   "macros.combat.dialog.attackType.combat.title": "Physic",
   "macros.combat.dialog.attackType.mystic.title": "Magic",
   "macros.combat.dialog.attackType.psychic.title": "Psychic",
-  "macros.combat.dialog.attacker.title": "Atacante",
+  "macros.combat.dialog.attacker.title": "Attacker",
   "macros.combat.dialog.attackerCustomModifier.title": "Attacker custom modifier",
   "macros.combat.dialog.attacking.title": "Attacking to ",
   "macros.combat.dialog.blockButton.title": "Try to block",
@@ -485,14 +487,13 @@
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
-  "macros.combat.dialog.critic.title": "Crític",
+  "macros.combat.dialog.critic.title": "Critic",
   "macros.combat.dialog.damage.title": "Damage",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
   "macros.combat.dialog.defenderCustomModifier.title": "Defender custom modifier",
   "macros.combat.dialog.defending.defend.title": "Defense",
-  "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.defending.title": "Defending from ",
   "macros.combat.dialog.defense.title": "Defense",
   "macros.combat.dialog.defenseButton.title": "Send defense",
@@ -505,15 +506,14 @@
   "macros.combat.dialog.dodgeButton.title": "Try to dodge",
   "macros.combat.dialog.dodgeValue.title": "Dodge value",
   "macros.combat.dialog.error.alreadyInCombat.title": "Your attack request have being rejected because GM is already involved in a combat. Wait your turn and try again.",
-  "macros.combat.dialog.error.multipleTargets.title": "Only can select one target",
-  "macros.combat.dialog.error.noSelectedActor.title": "You don't have selected a character",
-  "macros.combat.dialog.error.noSelectedToken.title": "You don't have selected a attacker",
   "macros.combat.dialog.error.cannotAttackYourself.title": "Cannot attack yourself",
-  "macros.combat.dialog.error.noTokenInCurrentScene.title": "You don't have ownership of any token in current scene",
+  "macros.combat.dialog.error.multipleTargets.title": "Only can select one target",
   "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Your token do not have any actor associated",
   "macros.combat.dialog.error.noExistTokenAnymore.title": "Token {token} do not exist anymore",
   "macros.combat.dialog.error.noGMActive.title": "Right now DM is not connected. Cant attack.",
-  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
+  "macros.combat.dialog.error.noSelectedActor.title": "You don't have selected a character",
+  "macros.combat.dialog.error.noSelectedToken.title": "You don't have selected a attacker",
+  "macros.combat.dialog.error.noTokenInCurrentScene.title": "You don't have ownership of any token in current scene",
   "macros.combat.dialog.error.notInActiveScene.title": "Can't attack while you are not in active scene",
   "macros.combat.dialog.error.oneTarget.title": "Need to select one target",
   "macros.combat.dialog.error.requestRejected.title": "Your attack request have being rejected",
@@ -526,6 +526,7 @@
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
+  "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.modifier.title": "Modifier",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
@@ -555,6 +556,7 @@
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
+  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
   "macros.combat.dialog.weaponUsed.title": "Weapon",
   "macros.combat.dialog.winner.title": " wins this assault",
   "macros.damageCalculator.dialog.attack.title": "Attack",
