--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -181,6 +181,7 @@
   "anima.ui.elanSection.elanRow.name": "Potencia",
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experiencia",
+  "anima.ui.general.destinyPoints.title": "Puntos de destino",
   "anima.ui.general.fatigue.title": "Cansancio",
   "anima.ui.general.initiative.base.title": "Turno",
   "anima.ui.general.life.current.title": "Puntos de vida",
@@ -188,11 +189,12 @@
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
-  "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.normal.title": "Normal (m)",
+  "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
+  "anima.ui.general.presence.title": "Presencia",
   "anima.ui.general.tabs.first": "Personaje",
   "anima.ui.general.tabs.second": "Detalles",
   "anima.ui.general.tabs.third": "Inventario",
@@ -476,7 +478,6 @@
   "macros.combat.dialog.attackType.psychic.title": "Psíquico",
   "macros.combat.dialog.attacker.title": "Atacante",
   "macros.combat.dialog.attackerCustomModifier.title": "Modificador personalizado del ataque",
-  "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.attacking.title": "Atacando a ",
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
@@ -503,18 +504,17 @@
   "macros.combat.dialog.dodgeButton.title": "Intentar esquivar",
   "macros.combat.dialog.dodgeValue.title": "Valor de esquiva",
   "macros.combat.dialog.error.alreadyInCombat.title": "Tu petición de ataque ha sido rechazada debido a que el GM ya se encuentra en un combate. Espera a tu turno e intentalo de nuevo.",
+  "macros.combat.dialog.error.cannotAttackYourself.title": "No puedes atacarte a ti mismo",
   "macros.combat.dialog.error.multipleTargets.title": "Sólo puedes seleccionar un objetivo",
+  "macros.combat.dialog.error.noActorAssociatedToToken.title": "El token {token} no tiene un actor asociado",
+  "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Tu token no tiene asociado un actor",
+  "macros.combat.dialog.error.noActorOnCurrentScene.title": "No se ha encontrado al actor {actor} en la escena actual",
+  "macros.combat.dialog.error.noExistTokenAnymore.title": "El token {token} no existe",
+  "macros.combat.dialog.error.noGMActive.title": "No se encuentra ningún GM activo ahora mismo, por lo que no puedes realizar un ataque",
   "macros.combat.dialog.error.noSelectedActor.title": "No tienes seleccionado a ningún personaje. Asegurate de seleccionarlo cuando entres al mundo por primera vez.",
   "macros.combat.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún atacante",
-  "macros.combat.dialog.error.cannotAttackYourself.title": "No puedes atacarte a ti mismo",
   "macros.combat.dialog.error.noTokenInCurrentScene.title": "No eres owner de ningún token en la escena actual",
-  "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Tu token no tiene asociado un actor",
-  "macros.combat.dialog.error.noActorAssociatedToToken.title": "El token {token} no tiene un actor asociado",
-  "macros.combat.dialog.error.noGMActive.title": "No se encuentra ningún GM activo ahora mismo, por lo que no puedes realizar un ataque",
-  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
-  "macros.combat.dialog.error.noActorOnCurrentScene.title": "No se ha encontrado al actor {actor} en la escena actual",
   "macros.combat.dialog.error.notInActiveScene.title": "No puedes atacar si no estás en la escena activa",
-  "macros.combat.dialog.error.noExistTokenAnymore.title": "El token {token} no existe",
   "macros.combat.dialog.error.oneTarget.title": "Necesitas seleccionar un objetivo",
   "macros.combat.dialog.error.requestRejected.title": "Tu petición de ataque ha sido rechazada.",
   "macros.combat.dialog.error.withoutActor.title": "El objetivo al que intentas atacar no tiene actor asociado",
@@ -526,6 +526,7 @@
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
+  "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.modifier.title": "Modificador",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
@@ -555,6 +556,7 @@
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
+  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
   "macros.combat.dialog.weaponUsed.title": "Arma",
   "macros.combat.dialog.winner.title": " gana esta ronda",
   "macros.damageCalculator.dialog.attack.title": "Ataque",
