--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -189,7 +189,7 @@
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
-  "anima.ui.general.movement.normal.title": "Normal (m)",
+  "anima.ui.general.movement.maximum.title": "Máximo (m)",
   "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Tipo mov.",
