changes: add confirmation to delete dynamic objects

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -429,6 +429,7 @@
   "chat.combatResult.damage.title": "{defender} takes <b>{damage}</b> damage points",
   "chat.combatResult.title": "Combat result",
   "contextualMenu.common.options.delete": "Delete",
+  "contextualMenu.common.options.edit": "Edit",
   "contextualMenu.elan.options.addPower": "Add power",
   "contextualMenu.elan.options.deletePower": "Delete power",
   "dialogs.accept": "Accept",
@@ -442,6 +443,8 @@
   "dialogs.items.combatTable.content": "Combat table name",
   "dialogs.items.contact.content": "Contact name",
   "dialogs.items.creature.content": "Creature name",
+  "dialogs.items.delete.body": "Are you sure?",
+  "dialogs.items.delete.title": "Delete",
   "dialogs.items.disadvantage.content": "Disadvantage name",
   "dialogs.items.elan.content": "Elan name",
   "dialogs.items.elanPower.content": "Power name",
