--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -428,6 +428,7 @@
   "chat.combatResult.damage.title": "{defender} recibe <b>{damage}</b> puntos de daño",
   "chat.combatResult.title": "Resultado del combate",
   "contextualMenu.common.options.delete": "Eliminar",
+  "contextualMenu.common.options.edit": "Editar",
   "contextualMenu.elan.options.addPower": "Añadir poder",
   "contextualMenu.elan.options.deletePower": "Eliminar poder",
   "dialogs.accept": "Aceptar",
@@ -441,6 +442,8 @@
   "dialogs.items.combatTable.content": "Nombre de la tabla de combate",
   "dialogs.items.contact.content": "Nombre del contacto",
   "dialogs.items.creature.content": "Nombre de la criatura",
+  "dialogs.items.delete.body": "¿Estas seguro?",
+  "dialogs.items.delete.title": "Eliminar",
   "dialogs.items.disadvantage.content": "Nombre de la desventaja",
   "dialogs.items.elan.content": "Nombre del Elan",
   "dialogs.items.elan_power.content": "Nombre del poder",
