fix: minor combat fixes and i18n

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -276,6 +276,7 @@
   "anima.ui.mystic.spell.via.emptiness.title": "Emptiness",
   "anima.ui.mystic.spell.via.essence.title": "Essence",
   "anima.ui.mystic.spell.via.fire.title": "Fire",
+  "anima.ui.mystic.spell.via.freeAccess.title": "Free access",
   "anima.ui.mystic.spell.via.illusion.title": "Illusion",
   "anima.ui.mystic.spell.via.knowledge.title": "Knowledge",
   "anima.ui.mystic.spell.via.light.title": "Light",
@@ -462,7 +463,7 @@
   "dialogs.items.secondarySkill.content": "Skill name",
   "dialogs.items.selectedSpell.content": "Selected spell name",
   "dialogs.items.specialSkill.content": "Special skill or table name",
-  "dialogs.items.spell.content": "Free access spell name",
+  "dialogs.items.spell.content": "Spell name",
   "dialogs.items.spellMaintenance.content": "Maintained spell name",
   "dialogs.items.summon.content": "Summon name",
   "dialogs.items.technique.content": "Technique name",
@@ -527,6 +528,7 @@
   "macros.combat.dialog.magicAttack.title": "Throw the spell {spell} to {target}",
   "macros.combat.dialog.magicDefense.title": "Throw the spell {spell} to defend from {target}",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
+  "macros.combat.dialog.magicProjection.defensive.title": "Defensive",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
   "macros.combat.dialog.modal.attack.title": "Attacking",
