--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -276,6 +276,7 @@
   "anima.ui.mystic.spell.via.emptiness.title": "Vacío",
   "anima.ui.mystic.spell.via.essence.title": "Esencia",
   "anima.ui.mystic.spell.via.fire.title": "Fuego",
+  "anima.ui.mystic.spell.via.freeAccess.title": "Libre acceso",
   "anima.ui.mystic.spell.via.illusion.title": "Ilusión",
   "anima.ui.mystic.spell.via.knowledge.title": "Conocimiento",
   "anima.ui.mystic.spell.via.light.title": "Luz",
@@ -460,7 +461,7 @@
   "dialogs.items.secondarySkill.content": "Nombre de la habilidad",
   "dialogs.items.selectedSpell.content": "Nombre del conjuro seleccionado",
   "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
-  "dialogs.items.spell.content": "Nombre del hechizo de acceso libre",
+  "dialogs.items.spell.content": "Nombre del hechizo",
   "dialogs.items.spellMaintenance.content": "Nombre del conjuro mantenido",
   "dialogs.items.summon.content": "Nombre de la invocación",
   "dialogs.items.technique.content": "Nombre de la técnica",
@@ -527,6 +528,7 @@
   "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio {spell} a {target}",
   "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio {spell} para defenderse del ataque de {target}",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
+  "macros.combat.dialog.magicProjection.defensive.title": "Defensiva",
   "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
   "macros.combat.dialog.modal.attack.title": "Atacando",
