--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,7 +3,7 @@
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
   "anima.ui.aspectSection.eyes.title": "Eyes",
-  "anima.ui.aspectSection.genre.title": "Genre",
+  "anima.ui.aspectSection.gender.title": "Gender",
   "anima.ui.aspectSection.hair.title": "Hair",
   "anima.ui.aspectSection.height.title": "Height",
   "anima.ui.aspectSection.race.title": "Race",
