--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -3,7 +3,7 @@
   "anima.ui.aspectSection.age.title": "Edad",
   "anima.ui.aspectSection.appearance.title": "Apariencia",
   "anima.ui.aspectSection.eyes.title": "Ojos",
-  "anima.ui.aspectSection.genre.title": "Sexo",
+  "anima.ui.aspectSection.gender.title": "Sexo",
   "anima.ui.aspectSection.hair.title": "Pelo",
   "anima.ui.aspectSection.height.title": "Altura",
   "anima.ui.aspectSection.race.title": "Raza",
