--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -562,6 +562,7 @@
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
   "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
+  "macros.combat.dialog.weaponQuality.title": "Calidad del arma",
   "macros.combat.dialog.weaponUsed.title": "Arma",
   "macros.combat.dialog.winner.title": " gana esta ronda",
   "macros.damageCalculator.dialog.attack.title": "Ataque",
