--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -449,6 +449,7 @@
   "dialogs.items.elan.content": "Nombre del Elan",
   "dialogs.items.elan_power.content": "Nombre del poder",
   "dialogs.items.innatePsychicPower.content": "Nombre del poder psíquico innato",
+  "dialogs.items.inventoryItem.content": "Nombre del objeto",
   "dialogs.items.kiSkill.content": "Nombre de la habilidad de Ki",
   "dialogs.items.language.content": "Nombre del lenguaje",
   "dialogs.items.level.content": "Nombre del arquetipo",
@@ -527,8 +528,8 @@
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
   "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio {spell} a {target}",
   "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio {spell} para defenderse del ataque de {target}",
-  "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensiva",
+  "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
   "macros.combat.dialog.modal.attack.title": "Atacando",
@@ -561,8 +562,8 @@
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
-  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
   "macros.combat.dialog.weaponQuality.title": "Calidad del arma",
+  "macros.combat.dialog.weaponRow.title": "{name} con ataque de {value}",
   "macros.combat.dialog.weaponUsed.title": "Arma",
   "macros.combat.dialog.winner.title": " gana esta ronda",
   "macros.damageCalculator.dialog.attack.title": "Ataque",
