--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -450,6 +450,7 @@
   "dialogs.items.elan.content": "Elan name",
   "dialogs.items.elanPower.content": "Power name",
   "dialogs.items.innatePsychicPower.content": "Innate psychic power name",
+  "dialogs.items.inventoryItem.content": "Object name",
   "dialogs.items.kiSkill.content": "Ki skill name",
   "dialogs.items.language.content": "Language name",
   "dialogs.items.level.content": "Archetype name",
@@ -527,8 +528,8 @@
   "macros.combat.dialog.fatigueUsed.title": "Used fatigue",
   "macros.combat.dialog.magicAttack.title": "Throw the spell {spell} to {target}",
   "macros.combat.dialog.magicDefense.title": "Throw the spell {spell} to defend from {target}",
-  "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensive",
+  "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
   "macros.combat.dialog.modal.attack.title": "Attacking",
@@ -561,8 +562,8 @@
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
-  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
   "macros.combat.dialog.weaponQuality.title": "Weapon quality",
+  "macros.combat.dialog.weaponRow.title": "{name} with {value} attack",
   "macros.combat.dialog.weaponUsed.title": "Weapon",
   "macros.combat.dialog.winner.title": " wins this assault",
   "macros.damageCalculator.dialog.attack.title": "Attack",
